[FEDIZ-38] Initial commit
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1426985 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -27,11 +27,12 @@
     </parent>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>examples</artifactId>
-    <name>Apache CXF Fediz Examples</name>
+    <name>Apache Fediz Examples</name>
     <packaging>pom</packaging>
 
     <modules>
         <module>simpleWebapp</module>
         <module>wsclientWebapp</module>
+        <module>springWebapp</module>
     </modules>
 </project>
