--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -33,5 +33,6 @@
       <module>core</module>
       <module>tomcat</module>
       <module>jetty</module>
+      <module>spring</module>
    </modules>
 </project>
