--- a/systests/simpleWebapp/pom.xml
+++ b/systests/simpleWebapp/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- Required to cast Principal to FederationPrincipal -->
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.0.1</version>
+            <version>${commons.lang.version}</version>
         </dependency>
     </dependencies>
     <build>
