--- a/systests/tests/pom.xml
+++ b/systests/tests/pom.xml
@@ -84,13 +84,13 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.2.2</version>
+            <version>${httpclient.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.htmlparser.jericho</groupId>
             <artifactId>jericho-html</artifactId>
-            <version>3.2</version>
+            <version>${jericho.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
