Integration testing for Tomcat 7 added
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1432961 13f79535-47bb-0310-9956-ffa450edef68

--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -36,7 +36,7 @@
       <module>springWebapp</module>
 -->
       <module>jetty8</module>
-<!--      <module>tomcat7</module>-->
+      <module>tomcat7</module>
    </modules>
 
 </project>
