[FEDIZ-44] - Rename IDP + STS wars to use hypens (fediz-idp + fediz-idp-sts) and update documentation
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1433471 13f79535-47bb-0310-9956-ffa450edef68

--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -93,6 +93,6 @@
             </plugin>
         </plugins>
         <!-- Name of the generated WAR file -->
-        <finalName>fedizidp</finalName>
+        <finalName>fediz-idp</finalName>
     </build>
 </project>
