Added admin,manager,user uri for testing
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1435183 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/springWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/springWebapp/src/main/webapp/WEB-INF/web.xml
@@ -60,6 +60,21 @@
 		<servlet-name>FederationServlet</servlet-name>
 		<url-pattern>/secure/fedservlet</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>FederationServlet</servlet-name>
+		<url-pattern>/secure/admin/fedservlet</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>FederationServlet</servlet-name>
+		<url-pattern>/secure/user/fedservlet</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>FederationServlet</servlet-name>
+		<url-pattern>/secure/manager/fedservlet</url-pattern>
+	</servlet-mapping>
 
  
 	<security-role>
