[FEDIZ-9] Initial work started
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1435332 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -34,5 +34,6 @@
       <module>tomcat</module>
       <module>jetty</module>
       <module>spring</module>
+      <module>cxf</module>
    </modules>
 </project>
