[FEDIZ-9] wsclientWebapp example updated to use fediz-cxf plugin
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1435370 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
 	<filter>
 		<filter-name>FederationFilter</filter-name>
-		<filter-class>org.apache.cxf.fediz.example.FederationFilter</filter-class>
+		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
 		<!--
 		<init-param>
 			<param-name>security.token.attribute</param-name>
