[FEDIZ-9] other examples updated as well to use fediz-cxf plugin (Optional)
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1435375 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,23 @@
 	<description>WS Federation Simple Web Application Example</description>
 	<display-name>WS Federation Simple Web Application Example</display-name>
 
+    <!-- Optional: Cache the security token in Thread Local Storage -->
+	<filter>
+		<filter-name>FederationFilter</filter-name>
+		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
+		<!--
+		<init-param>
+			<param-name>security.token.attribute</param-name>
+			<param-value>org.apache.fediz.SECURITY_TOKEN</param-value>
+		</init-param>
+		-->
+	</filter>
+
+	<filter-mapping>
+		<filter-name>FederationFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>FederationServlet</servlet-name>
 		<servlet-class>org.apache.cxf.fediz.example.FederationServlet</servlet-class>
