Restructured Spring Pre-Auth example/systest
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1445901 13f79535-47bb-0310-9956-ffa450edef68

--- a/systests/jetty8/pom.xml
+++ b/systests/jetty8/pom.xml
@@ -160,7 +160,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.cxf.fediz.systests</groupId>
-                                    <artifactId>systests-springWebapp</artifactId>
+                                    <artifactId>systests-springPreauthWebapp</artifactId>
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
