--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -33,6 +33,6 @@
     <modules>
         <module>simpleWebapp</module>
         <module>wsclientWebapp</module>
-        <module>springWebapp</module>
+        <module>springPreauthWebapp</module>
     </modules>
 </project>
