[maven-release-plugin] prepare release fediz-1.0.3
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes@1447325 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -80,9 +80,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/trunk</developerConnection>
-        <url>http://svn.apache.org/repos/asf/cxf/fediz/trunk</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.3</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.3</developerConnection>
+        <url>http://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.3</url>
     </scm>
 
     <issueManagement>
