Fixing URL information
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes@1447368 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/trunk</developerConnection>
-        <url>http://svn.apache.org/repos/asf/cxf/fediz/trunk</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</developerConnection>
+        <url>http://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</url>
     </scm>
 
     <issueManagement>
